--- a/index.html
+++ b/index.html
@@ -372,46 +372,110 @@
 					</div>
 					<div class="col-md-6">
 						<div class="card mb-3" style="max-width: 540px;">
-						  <div class="row no-gutters">
-						    <div class="col-md-6">
-						      <img src="assets/img/blog2.png" class="card-img" alt="...">
-						    </div>
-						    <div class="col-md-6">
-						      <div class="card-body pb-0">
-						       <h5 class="card-title text-left">InterAmerican Campus Open House</h5>
-								<p class="card-text">By <span class="f-color">Rechard Jones</span></p>
-								<p class="card-text number-family">17 Oct 2016 | <i class="fa fa-comments" aria-hidden="true"></i> 75</p>
-								<p class="card-text">
-									Vel illum dolore eu feugiat nulla fa Vel illum dolore eu
-								</p>
-								<a href="#" class="btn pl-0">READ MORE <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-						      </div>
-						    </div>
-						  </div>
+							<div class="row no-gutters">
+								<div class="col-md-6">
+									<img src="assets/img/blog2.png" class="card-img" alt="...">
+								</div>
+								<div class="col-md-6">
+									<div class="card-body pb-0">
+										<h5 class="card-title text-left">InterAmerican Campus Open House</h5>
+										<p class="card-text">By <span class="f-color">Rechard Jones</span></p>
+										<p class="card-text number-family">17 Oct 2016 | <i class="fa fa-comments" aria-hidden="true"></i> 75</p>
+										<p class="card-text">
+											Vel illum dolore eu feugiat nulla fa Vel illum dolore eu
+										</p>
+										<a href="#" class="btn pl-0">READ MORE <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+									</div>
+								</div>
+							</div>
 						</div>
 						<div class="card mb-3" style="max-width: 540px;">
-						  <div class="row no-gutters">
-						    <div class="col-md-6">
-						      <img src="assets/img/blog3.png" class="card-img" alt="...">
-						    </div>
-						    <div class="col-md-6">
-						      <div class="card-body pb-0">
-						       <h5 class="card-title text-left">InterAmerican Campus Open House</h5>
-								<p class="card-text">By <span class="f-color">Rechard Jones</span></p>
-								<p class="card-text number-family">17 Oct 2016 | <i class="fa fa-comments" aria-hidden="true"></i> 75</p>
-								<p class="card-text">
-									Vel illum dolore eu feugiat nulla fa Vel illum dolore eu
-								</p>
-								<a href="#" class="btn pl-0">READ MORE <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-						      </div>
-						    </div>
-						  </div>
+							<div class="row no-gutters">
+								<div class="col-md-6">
+									<img src="assets/img/blog3.png" class="card-img" alt="...">
+								</div>
+								<div class="col-md-6">
+									<div class="card-body pb-0">
+										<h5 class="card-title text-left">InterAmerican Campus Open House</h5>
+										<p class="card-text">By <span class="f-color">Rechard Jones</span></p>
+										<p class="card-text number-family">17 Oct 2016 | <i class="fa fa-comments" aria-hidden="true"></i> 75</p>
+										<p class="card-text">
+											Vel illum dolore eu feugiat nulla fa Vel illum dolore eu
+										</p>
+										<a href="#" class="btn pl-0">READ MORE <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="text-center py-5">
+					<a href="#" class="btn btn-f-o">BROWSE ALL NEWSES</a>
+				</div>
+			</div>
+		</section>
+		<!-- Blog Section End -->
+		<!-- TESTIMONIAL Section Start -->
+		<section class="testmonial">
+			<div class="container py-5">
+				<h1 class="text-center fw-bold">
+				What Student Says?
+				</h1>
+				<p class="text-center">
+					Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet <br>
+					doming id quod mazim placerat facer possim assum.
+				</p>
+				<div class="row py-5">
+					<div class="col-md-12">
+						<div class="testimonial owl-carousel owl-theme">
+							<div class="item">
+								<div class="recent">
+									<img src="assets/img/testimonial1.png" class="recent-img" alt="!">
+									<div class="card-body bg-light pt-5 recent-card">
+										<p class="text-justify pt-3">
+											Nam liber tempor cum soluta nobis eleif end option congue nihil impediet doming id quod mazim placerat facer possim assum. Typi non habent claritatem.
+										</p>
+										<p class="pt-3">
+											<span class="fw900"> Rubel Hossen</span> <br>
+											Department of management
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="item">
+								<div class="recent">
+									<img src="assets/img/testimonia3l.png" class="recent-img" alt="!">
+									<div class="card-body bg-light pt-5 recent-card">
+										<p class="text-justify pt-3">
+											Nam liber tempor cum soluta nobis eleif end option congue nihil impediet doming id quod mazim placerat facer possim assum. Typi non habent claritatem.
+										</p>
+										<p class="pt-3">
+											<span class="fw900"> Rubel Hossen</span> <br>
+											Department of management
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="item">
+								<div class="recent">
+									<img src="assets/img/testimonial4.png" class="recent-img" alt="!">
+									<div class="card-body bg-light pt-5 recent-card">
+										<p class="text-justify pt-3">
+											Nam liber tempor cum soluta nobis eleif end option congue nihil impediet doming id quod mazim placerat facer possim assum. Typi non habent claritatem.
+										</p>
+										<p class="pt-3">
+											<span class="fw900"> Rubel Hossen</span> <br>
+											Department of management
+										</p>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<!-- Blog Section End -->
+		<!-- TESTIMONIAL Section End -->
 		<!-- jQuery v3.5.1 -->
 		<script src="assets/js/jquery-3.5.1.slim.min.js"></script>
 		<!-- Bootstrap v4.5.3 -->
