--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
+		<!-- Magic Popup CSS -->
+		<link rel="stylesheet" href="assets/css/magnific-popup.css">
 		<!-- Custom CSS -->
 		<link rel="stylesheet" href="assets/css/style.css" />
 		<!-- Responsive CSS -->
@@ -34,9 +36,9 @@
 			<div class="container">
 				<div class="d-flex justify-content-between">
 					<ul class="d-flex left-top">
-						<li><a href="#" class="s-color number-family"><i class="fa fa-phone" aria-hidden="true"> </i> +(00) 112 233 445 56</a></li>
-						<li><a href="#" class="s-color"><i class="fa fa-envelope" aria-hidden="true"></i> crazycafe.net@gmail.com</a></li>
-						<li> <a href="#" class="s-color"><i class="fa fa-calendar" aria-hidden="true"></i> Sun-Mon (9am-4pm)</a></li>
+						<li><a href="tel:88018670033550" class="s-color number-family"><i class="fa fa-phone" aria-hidden="true"> </i> <span> +(00) 112 233 445 56</span></a></li>
+						<li><a href="mailto:crazycafe.net@gmail.com" class="s-color"><i class="fa fa-envelope" aria-hidden="true"></i> <span> crazycafe.net@gmail.com</span></a></li>
+						<li> <a href="#" class="s-color"><i class="fa fa-calendar" aria-hidden="true"></i> <span> Sun-Mon (9am-4pm)</span></a></li>
 					</ul>
 					<ul class="right-top d-flex">
 						<li><a href="#" class="s-color line-after">Login</a></li>
@@ -476,12 +478,147 @@
 			</div>
 		</section>
 		<!-- TESTIMONIAL Section End -->
+		<!-- CTA Section Start -->
+		<section class="cta f-bg">
+			<div class="text-center py-5">
+				<h1 class="fw900 text-light">SUBSCRIBE TO OUR NEWSLETTER</h1>
+				<p class="pb-1 text-light"> Signup to receive email updates about courses</p>
+				<div class="d-fiex">
+					<input type="email" name="#" id="#" class="email" placeholder="Your email">
+					<button type="submit" class="btn test_btn">
+					<span class="fa fa-envelope"></span>
+					</button>
+				</div>
+			</div>
+		</section>
+		<!-- CTA Section End -->
+		<!-- Footer Section Start -->
+		<footer class="footer t-bg">
+			<div class="container py-5">
+				<div class="row">
+					<div class="col-md-3">
+						<img src="assets/img/logo-light.png" alt="!">
+						<p class="text-justify text-light pt-3">
+							Lorem ipsum dolor sit ame consectetu
+							adipiscing elit sed diam nonummynibh
+							euismod tincidunt ut laoreet dolorema
+							ad minim veniam.
+						</p>
+						<ul>
+							<li><a href="#" class="s-color number-family"><i class="fa fa-phone" aria-hidden="true"> </i> +(00) 112 233 445 56</a></li>
+						<li><a href="#" class="s-color"><i class="fa fa-envelope" aria-hidden="true"></i> crazycafe.net@gmail.com</a></li>
+						</ul>
+					</div>
+					<div class="col-md-3">
+						<h5 class="text-light pt-2">Link</h5>
+						<div class="row pt-3">
+							<div class="col-6">
+								<ul class="left-link">
+								<li><a href="#"><span class="fa fa-angle-right f-color"></span> Home</a></li>
+								<li><a href="#"><span class="fa fa-angle-right f-color"></span> Courses</a></li>
+								<li><a href="#"><span class="fa fa-angle-right f-color"></span> News</a></li>
+								<li><a href="#"><span class="fa fa-angle-right f-color"></span> Events</a></li>
+							</ul>
+							</div>
+							<div class="col-6">
+								<ul class="left-link">
+								<li><a href="#"><span class="fa fa-angle-right f-color"></span> Gallery</a></li>
+								<li><a href="#"><span class="fa fa-angle-right f-color"></span> Courses</a></li>
+								<li><a href="#"><span class="fa fa-angle-right f-color"></span> News</a></li>
+								<li><a href="#"><span class="fa fa-angle-right f-color"></span> Events</a></li>
+							</ul>
+							</div>
+							
+						</div>
+						
+					</div>
+					<div class="col-md-2">
+						<h5 class="text-light pt-2">Support</h5>
+						<div class="row pt-3">
+							<div class="col-12">
+								<ul class="left-link">
+								<li><a href="#"><span class="fa fa-angle-right f-color"></span> Documentation</a></li>
+								<li><a href="#"><span class="fa fa-angle-right f-color"></span> Forums</a></li>
+								<li><a href="#"><span class="fa fa-angle-right f-color"></span> Language Packs</a></li>
+								<li><a href="#"><span class="fa fa-angle-right f-color"></span> Release Status</a></li>
+							</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<h5 class="text-light pt-2">Flickr Album</h5>
+						<div class="popup-gallery">
+						<div class="row pt-3">
+							<div class="col-4">
+								<a href="assets/img/footer1.png">
+									<img src="assets/img/footer1.png">
+								</a>
+							</div>
+							<div class="col-4">
+								<a href="assets/img/footer2.png">
+									<img src="assets/img/footer2.png">
+								</a>
+							</div>
+							<div class="col-4">
+								<a href="assets/img/footer3.png">
+									<img src="assets/img/footer3.png">
+								</a>
+							</div>
+							<div class="col-4 mt-3">
+								<a href="assets/img/footer1.png">
+									<img src="assets/img/footer1.png">
+								</a>
+							</div>
+							<div class="col-4 mt-3">
+								<a href="assets/img/footer2.png">
+									<img src="assets/img/footer2.png">
+								</a>
+							</div>
+							<div class="col-4 mt-3">
+								<a href="assets/img/footer3.png">
+									<img src="assets/img/footer3.png">
+								</a>
+							</div>
+						</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="container pb-3">
+				<div class="line ">
+					<div class="d-flex justify-content-between c-line">
+						<div class="left-text pt-3">
+							<p class="text-left text-light">
+								&copy;  Copy right 2016. All Right Reserved  
+							</p>
+						</div>
+						<div class="mid-text pt-3">
+							<p class="text-left text-light">
+								Design by Mashok khan
+							</p>
+						</div>
+						<div class="right-text pt-3">
+							<ul class="d-flex footer-icon">
+								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+								<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+								<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+								<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
+		<!-- Footer Section End -->
 		<!-- jQuery v3.5.1 -->
 		<script src="assets/js/jquery-3.5.1.slim.min.js"></script>
 		<!-- Bootstrap v4.5.3 -->
 		<script src="assets/js/bootstrap.min.js"></script>
 		<!-- owl carousel Js -->
 		<script src="assets/js/owl.carousel.min.js"></script>
+		<!-- magic popup js -->
+		<script src="assets/js/jquery.magnific-popup.min.js"></script>
 		<!-- Main Js -->
 		<script src="assets/js/main.js"></script>
 	</body>
